[project]
name = "powerfill-py"
version = "0.1.0"
description = "Powerfill Python SDK"
readme = "README.md"
requires-python = ">=3.12"
authors = ["Arnaud Kayonga <a.kayonga@meshpower.co.rw>"]
dependencies = [
    "aiohttp>=3.13.2",
    "pydantic>=2.12.4",
]

[dependency-groups]
ci = [
    "python-semantic-release>=10.5.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
]
